downgrade kotlin stdlib from jre7 to default 6

--- a/stub-android/build.gradle
+++ b/stub-android/build.gradle
@@ -14,7 +14,7 @@ repositories {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 //    compile 'com.google.android:android:4.1.1.4'
 //    javadocDeps 'com.google.android:android:4.1.1.4'
 }
