basic publishing work done, waiting for jcenter to approve Squashed commit

--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,13 @@ apply plugin: 'kotlin'
 buildscript {
     ext.kotlin_version = '1.1.51'
     repositories {
+        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -17,10 +18,8 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         jcenter()
-        maven {
-            url "https://maven.google.com"
-        }
     }
 }
 
@@ -29,10 +28,10 @@ dependencies {
 }
 
 ext {
-    targetSdkVersion = 24
+    targetSdkVersion = 26
     minSdkVersion = 14
     compileSdkVersion = 26
-    buildToolsVersion = '26.0.1'
+    buildToolsVersion = '26.0.2'
 
     supportLibraryVersion = '26.1.0'
 }
