--- a/sample-appcompat/build.gradle
+++ b/sample-appcompat/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     compile "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
     compile "com.android.support:recyclerview-v7:$rootProject.supportLibraryVersion"
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+//    compile 'com.krenvpravo.viewbinder:viewbinder:0.1'
     compile project(path: ':viewbinder-android')
 
     testCompile 'junit:junit:4.12'
