--- a/sample-appcompat/build.gradle
+++ b/sample-appcompat/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     compile "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
     compile "com.android.support:recyclerview-v7:$rootProject.supportLibraryVersion"
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile "com.bluelinelabs:conductor:$rootProject.conductorVersion"
+    compile "com.bluelinelabs:conductor:2.1.0"
     compile project(path: ':viewbinder-android')
 
     testCompile 'junit:junit:4.12'
