--- a/sample-android/src/main/AndroidManifest.xml
+++ b/sample-android/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.krenvpravo.viewbinder">
+    package="com.krenvpravo.viewbinder.sample">
 
     <application
         android:allowBackup="true"
