--- a/viewbinder-android/build.gradle
+++ b/viewbinder-android/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin'
 apply plugin: 'maven-publish'
 apply plugin: 'com.jfrog.bintray'
 
-//   ./gradlew build bintrayUpload // to upload
+//  to upload to jcenter use ./gradlew build bintrayUpload
 bintray {
     def keyProps = new Properties()
     keyProps.load(new FileInputStream(rootProject.file('viewbinder-secret/credentials.properties')))
@@ -37,7 +37,7 @@ publishing {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
 //    compileOnly 'com.google.android:support-v4:r7'
 //    javadocDeps 'com.google.android:support-v4:r7'
@@ -46,6 +46,6 @@ dependencies {
 //    javadocDeps project(':stub-android')
 
     testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:2.2.15'
+    testCompile 'org.mockito:mockito-core:2.2.29'
 }
 
