--- a/viewbinder-android/build.gradle
+++ b/viewbinder-android/build.gradle
@@ -1,4 +1,3 @@
-//apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'maven-publish'
 apply plugin: 'com.jfrog.bintray'
@@ -29,7 +28,7 @@ publishing {
     publications {
         MyPublication(MavenPublication) {
             artifact jar
-            groupId 'com.krenvpravo.viewbinder'
+            groupId 'com.viewbinder'
             artifactId 'viewbinder'
             version '0.2'
         }
