--- a/viewbinder-android/build.gradle
+++ b/viewbinder-android/build.gradle
@@ -36,7 +36,7 @@ publishing {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
 //    compileOnly 'com.google.android:support-v4:r7'
 //    javadocDeps 'com.google.android:support-v4:r7'
