--- a/sample-appcompat/build.gradle
+++ b/sample-appcompat/build.gradle
@@ -23,11 +23,12 @@ android {
 }
 
 dependencies {
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
     implementation "com.android.support:recyclerview-v7:$rootProject.supportLibraryVersion"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-//    compile 'com.krenvpravo.viewbinder:viewbinder:0.1'
-    implementation project(path: ':viewbinder-android')
+    compile 'com.krenvpravo.viewbinder:viewbinder:0.2'
+//    implementation project(path: ':viewbinder-android')
 
     testCompile 'junit:junit:4.12'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
