--- a/sample-appcompat/build.gradle
+++ b/sample-appcompat/build.gradle
@@ -15,7 +15,7 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
-        release {
+        debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -27,8 +27,8 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
     implementation "com.android.support:recyclerview-v7:$rootProject.supportLibraryVersion"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.krenvpravo.viewbinder:viewbinder:0.2'
-//    implementation project(path: ':viewbinder-android')
+//    compile 'com.krenvpravo.viewbinder:viewbinder:0.2'
+    implementation project(path: ':viewbinder-android')
 
     testCompile 'junit:junit:4.12'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
