--- a/sample-appcompat/build.gradle
+++ b/sample-appcompat/build.gradle
@@ -27,8 +27,8 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
     implementation "com.android.support:recyclerview-v7:$rootProject.supportLibraryVersion"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-//    api 'com.krenvpravo.viewbinder:viewbinder:0.2'
-    implementation project(path: ':viewbinder-android')
+    api 'com.viewbinder:viewbinder:0.3'
+//    implementation project(path: ':viewbinder-android')
 
     testCompile 'junit:junit:4.12'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
