--- a/viewbinder-android/build.gradle
+++ b/viewbinder-android/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     compileOnly project(':stub-appcompat')
 //    javadocDeps project(':stub-android')
 
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:2.7.11'
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:2.7.11'
 }
 
