--- a/sample-androidx/build.gradle
+++ b/sample-androidx/build.gradle
@@ -24,11 +24,12 @@ android {
 
 dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
-    implementation "com.android.support:recyclerview-v7:$rootProject.supportLibraryVersion"
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    api 'com.viewbinder:viewbinder:0.3.1'
-//    implementation project(path: ':viewbinder-android')
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "androidx.recyclerview:recyclerview:1.0.0"
+//    implementation 'androidx.cardview:cardview:1.0.0'
+//    api 'com.viewbinder:viewbinder:0.3.1'
+    implementation project(path: ':viewbinder-android')
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
