--- a/sample-androidx/build.gradle
+++ b/sample-androidx/build.gradle
@@ -28,8 +28,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.recyclerview:recyclerview:1.0.0"
 //    implementation 'androidx.cardview:cardview:1.0.0'
-//    api 'com.viewbinder:viewbinder:0.3.1'
-    api project(':viewbinder-android')
+    implementation "com.viewbinder:viewbinder:0.4.1"
+//    implementation project(':viewbinder-android')
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
