--- a/viewbinder-android/build.gradle
+++ b/viewbinder-android/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'kotlin'
 apply plugin: 'maven-publish'
 apply plugin: 'com.jfrog.bintray'
 
-def libVersion = '0.3.1'
+def libVersion = '0.4.1'
 
 //  to upload to jcenter use ./gradlew build bintrayUpload
 bintray {
@@ -22,7 +22,7 @@ bintray {
             desc = 'viewbinder to bind your views by kotlin delegates'
             released  = new Date()
 //            vcsTag = '1.3.0'
-            attributes = ['gradle-plugin': 'com.viewbinder:viewbinder:0.1']
+            attributes = ['gradle-plugin': "com.viewbinder:viewbinder:$libVersion"]
         }
     }
 }
