many versions updated

--- a/stub-androidx/build.gradle
+++ b/stub-androidx/build.gradle
@@ -11,6 +11,6 @@ buildscript {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile project(':stub-android')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation project(':stub-android')
 }
