--- a/sample-appcompat/build.gradle
+++ b/sample-appcompat/build.gradle
@@ -27,8 +27,8 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
     implementation "com.android.support:recyclerview-v7:$rootProject.supportLibraryVersion"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-//    implementation 'com.viewbinder:viewbinder:0.4.3'
-    implementation project(path: ':viewbinder-android')
+    implementation 'com.viewbinder:viewbinder:0.4.4'
+//    implementation project(path: ':viewbinder-android')
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
