--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-apply plugin: 'kotlin'
 
 buildscript {
     ext.kotlin_version = '1.5.21'
@@ -9,19 +8,22 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.2'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlinx:binary-compatibility-validator:0.5.0"
+        classpath "org.jetbrains.dokka:dokka-gradle-plugin:1.4.32"
     }
 }
+
+plugins {
+    id("io.github.gradle-nexus.publish-plugin") version "1.1.0"
+}
+
 allprojects {
     repositories {
         google()
         mavenCentral()
+        jcenter()
     }
-}
-
-dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
 
 ext {
@@ -31,3 +33,9 @@ ext {
 
     supportLibraryVersion = '28.0.0'
 }
+
+apply plugin: "io.github.gradle-nexus.publish-plugin"
+apply plugin: 'org.jetbrains.dokka'
+apply plugin: 'binary-compatibility-validator'
+apply from: "$rootDir/maven-scripts/info.gradle"
+apply from: "${rootDir}/maven-scripts/publish-root.gradle"
