--- a/viewbinder-android/build.gradle
+++ b/viewbinder-android/build.gradle
@@ -1,49 +1,7 @@
 apply plugin: 'kotlin'
-apply plugin: 'maven-publish'
-apply plugin: 'com.jfrog.bintray'
+apply from: "$rootDir/maven-scripts/info.gradle"
 
-def libVersion = '2.0.0'
 
-//  to upload to jcenter use ./gradlew build bintrayUpload
-bintray {
-    user = System.getenv('bintrayUser')
-    key = System.getenv('bintrayKey')
-    publications = ['MyPublication']
-    pkg {
-        repo = 'viewbinder'
-        name = 'viewbinder'
-        licenses = ['Apache-2.0']
-        vcsUrl = 'https://github.com/Dmitry-Borodin/viewbinder'
-
-        version {
-            name = libVersion
-            desc = 'viewbinder to bind your views by kotlin delegates'
-            released  = new Date()
-            vcsTag = libVersion
-            attributes = ['gradle-plugin': "com.viewbinder:viewbinder:$libVersion"]
-        }
-    }
-}
-
-task sourcesJar(type: Jar) {
-    from sourceSets.main.java.srcDirs
-    classifier = 'sources'
-}
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
-    from javadoc.destinationDir
-}
-publishing {
-    publications {
-        MyPublication(MavenPublication) {
-            from components.java
-            artifact sourcesJar
-            groupId 'com.viewbinder'
-            artifactId 'viewbinder'
-            version libVersion
-        }
-    }
-}
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -53,7 +11,8 @@ dependencies {
     compileOnly project(':stub-androidx')
 //    javadocDeps project(':stub-android')
 
-    testImplementation 'junit:junit:4.13'
-    testImplementation 'org.mockito:mockito-core:3.2.4'
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:3.10.0'
 }
 
+apply from: "$rootDir/maven-scripts/publish-module.gradle"
