updated samples to a maven central repo

--- a/stub-appcompat/build.gradle
+++ b/stub-appcompat/build.gradle
@@ -14,3 +14,8 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile project(':stub-android')
 }
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
