--- a/sample-android/build.gradle
+++ b/sample-android/build.gradle
@@ -21,10 +21,10 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'com.viewbinder:viewbinder:0.4.4'
+    implementation 'com.dmitryborodin:viewbinder-android:2.1.0'
 //    implementation project(path: ':viewbinder-android')
 
-    testImplementation 'junit:junit:4.13'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
