--- a/sample-androidx/build.gradle
+++ b/sample-androidx/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
 //    implementation 'androidx.cardview:cardview:1.0.0'
-    implementation "com.viewbinder:viewbinder:2.0.0"
+    implementation "com.dmitryborodin:viewbinder-android:2.1.0"
 //    implementation project(':viewbinder-android')
 
     testImplementation 'junit:junit:4.13.2'
