--- a/stub-appcompat/build.gradle
+++ b/stub-appcompat/build.gradle
@@ -11,8 +11,8 @@ buildscript {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile project(':stub-android')
+    api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    api project(':stub-android')
 }
 
 java {
