--- a/viewbinder-android/build.gradle
+++ b/viewbinder-android/build.gradle
@@ -4,7 +4,7 @@ apply from: "$rootDir/maven-scripts/info.gradle"
 
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     compileOnly project(':stub-android')
     compileOnly project(':stub-appcompat')
